[project]
name = "ml-network-security-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.1.31",
    "dagshub>=0.5.9",
    "dill>=0.3.9",
    "ensure>=1.0.4",
    "fastapi>=0.115.11",
    "ipython>=8.34.0",
    "joblib>=1.4.2",
    "mlflow>=2.21.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyaml>=25.1.0",
    "pymongo[srv]>=4.11.3",
    "python-box>=7.3.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
